AUGREL/src/objects/Forms_QueryConfig__c.object
<CustomObject>
    <description>Forms_QueryConfig for SourceSystem=&apos;SFDC&apos; in Form_Field__c</description>
    <fields>
        <fullName>Complex_Query__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Complex Query</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <label>DataType</label>
        <picklist>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Object_Field__c</fullName>
        <label>Document_Object_Field</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_APIName__c</fullName>
        <label>Field_APIName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Field__c</fullName>
        <label>Filter Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MigrationID__c</fullName>
        <externalId>true</externalId>
        <label>MigrationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Object_ApiName__c</fullName>
        <label>Object_ApiName</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReferenceAttribute__c</fullName>
        <label>ReferenceAttribute</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <label>Forms Query Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MigrationID__c</columns>
        <columns>NAME</columns>
        <columns>Document_Object_Field__c</columns>
        <columns>DataType__c</columns>
        <columns>Field_APIName__c</columns>
        <columns>Object_ApiName__c</columns>
        <columns>Filter_Field__c</columns>
        <columns>ReferenceAttribute__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>QueryConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forms Query Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>